@@ -10,5 +10,10 @@
       <summary>Priority to use for this plugin</summary>
       <description>Priority to use for this plugin in ukui-settings-daemon startup queue</description>
     </key>
+    <key name="custom-date-format" type="s">
+      <default>'default'</default>
+      <summary>Custom Date Format</summary>
+      <description>Custom date formate by user</description>
+    </key>
   </schema>
 </schemalist>
