@@ -1,4 +1,10 @@
 <schemalist>
+  <enum id="org.mate.SettingsDaemon.xrandr-apply-enum">
+    <value nick="noshow" value="0"/>
+    <value nick ="show" value="1"/>
+    <value nick="certain" value="2"/>
+    <value nick="cancel" value="3"/>
+  </enum>
   <schema gettext-domain="@GETTEXT_PACKAGE@" id="org.ukui.SettingsDaemon.plugins.xrandr" path="/org/ukui/settings-daemon/plugins/xrandr/">
     <key name="active" type="b">
       <default>true</default>
@@ -34,6 +40,11 @@
       <default>'/etc/ukui-settings-daemon/xrandr/monitors.xml'</default>
       <summary>File for default configuration for RandR</summary>
       <description>The XRandR plugin will look for a default configuration in the file specified by this key.  This is similar to the ~/.config/monitors.xml that normally gets stored in users' home directories.  If a user does not have such a file, or has one that does not match the user's setup of monitors, then the file specified by this key will be used instead.</description>
+    </key>
+    <key name="xrandr-apply" enum="org.mate.SettingsDaemon.xrandr-apply-enum">
+      <default>'noshow'</default>
+      <summary>The xrandr apply window status</summary>
+      <description>the xrandr apply window show/notshow when true/false.</description>
     </key>
   </schema>
 </schemalist>
