@@ -56,6 +56,8 @@ enum {
         FILE_MANAGER_KEY,
         ON_SCREEN_KEYBOARD_KEY,
         LOGOUT_KEY,
+        LOGOUT1_KEY,
+        LOGOUT2_KEY,
         TERMINAL_KEY,
         SCREENSHOT_KEY,
         WINDOW_SCREENSHOT_KEY,
@@ -99,6 +101,8 @@ static struct {
         { SCREENREADER_KEY, "screenreader", NULL, NULL },
         { ON_SCREEN_KEYBOARD_KEY, "on-screen-keyboard", NULL, NULL },
         { LOGOUT_KEY, "logout", NULL, NULL },
+        { LOGOUT1_KEY, "logout1", NULL, NULL },
+        { LOGOUT2_KEY, "logout2", NULL, NULL },
         { TERMINAL_KEY, "terminal", NULL, NULL },
         { SCREENSHOT_KEY, "screenshot", NULL, NULL },
         { WINDOW_SCREENSHOT_KEY, "window-screenshot", NULL, NULL },
