@@ -1,11 +1,18 @@
-ukui-settings-daemon (1.2.1-1) unstable; urgency=medium
+ukui-settings-daemon (1.2.1-2) v100; urgency=medium
 
-  * New upstream bugfix release.
+  * Sync from v10 mate-settings-daemon
+    - Sync patch
+
+ -- liutong <liutong@kylinos.cn>  Fri, 08 May 2020 12:00:00 +0800
+
+ukui-settings-daemon (1.2.1-1) v101; urgency=medium
+
+  * New upstream bugfix release sync from v10 mate-settings-daemon
     - Fix the wrong command when do action of shutdown and logout.
     - Fix the numlock issue.
     - Fix that the settings of cursor theme didn't work.
 
- -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 26 Mar 2020 12:00:00 +0800
+ -- liutong <liutong@kylinos.cn>  Thu, 07 May 2020 12:00:00 +0800
 
 ukui-settings-daemon (1.2.0-1) unstable; urgency=medium
 
